2004-02-14    <larus@C745660-A>

	* parser.y:
	Record labels on line with syntax error.

	* scanner.l [P. Augustyniak silvathraec@rpg.pl]:
	Added \ooo constants to strings.

	* mips-syscall.c [Shaunak Pawagi (shaunak@cs.sunysb.edu)]:
	Only print 8 digits for single precision floats.

	* spim.html [Shaunak Pawagi (shaunak@cs.sunysb.edu)]:
	Correct -delayed-branches and -delayed-loads to -delayed_branches
	and -delayed_loads.

	* spim.c [Jos Hulzink (josh@stack.nl)]:
	Incorrect ifdef around vprintf.
	
	* spim.c [Marvin Solomon (solomon@cs.wisc.edu)]:
	Core dumped when passed one argument.

	* run.c tt.core.s [Marvin Solomon (solomon@cs.wisc.edu)]:
	Change to test for overflow in integer divide was backwards and
	nullified all divides by -1.

	* Configure [Russell D. Meier (meier@msoe.edu)]:
	Removed the -traditional-cpp flag from MacOSX. (It appears that
	the semantics of this flag have changed and now break spim.)

	* Configure Imakefile Makefile.cygwin Makefile.std Tests/tt.le.s
	Tests/tt.be.s Tests/tt.core.s Tests/tt.core.OK Tests/tt.endian.OK:
	Factored torture tests into endian-indpendent and endian-dependent
	pieces.

2003-01-04    <larus@HomeMachine>

	* Version 6.5 released.

	* spim.c PCSpimView.cpp:
	If started with only one argument, assume it is a file
	name. [Armin Mueller [arm.in@web.de]]

	* :
	Added Alt-F4 shortcut to PCSpim.

	* trap.handler:
	Return to instruction at EPC on interrupt. Comment code
	better. [Nuno Lau [lau@det.ua.pt]]

	* spim.c:
	Partioned print_reg into 3 cases, to avoid casting int to char* on
	64 bit machine. [Ken Swarner [kswarner@siena.edu]]

	* spim.html:
	Cleaned up file and added installation instructions.

2003-01-03    <larus@HomeMachine>

	* README:
	Typo in README. [Ian Langworth [bass@ccs.neu.edu]]

2003-01-01    <larus@HomeMachine>

	* run.c:
	Got (real!) hardware exception on integer overflow in
	division. [Deborah Ariel Pickett [debbiep@mail.csse.monash.edu.au]]

	* xspim.c: